--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -85,6 +85,13 @@
   publisher={Elsevier}
 }
 
+@book{mickens1994nonstandard,
+  title={Nonstandard finite difference models of differential equations},
+  author={Mickens, Ronald E},
+  year={1994},
+  publisher={World Scientific}
+}
+
 @article{mickens2005dynamic,
   title={Dynamic consistency: a fundamental principle for constructing nonstandard finite difference schemes for differential equations},
   author={Mickens, Ronald E},
@@ -125,4 +132,26 @@
   pages={25--37},
   year={2012},
   publisher={Elsevier}
+}
+
+@book{schubert2001mantle,
+  title={Mantle Convection in the Earth and Planets 2 Volume Set},
+  author={Schubert, Gerald and Turcotte, Donald L and Olson, Peter},
+  year={2001},
+  publisher={Cambridge University Press}
+}
+
+@book{zienkiewicz1977finite,
+  title={The finite element method},
+  author={Zienkiewicz, Olgierd Cecil and Taylor, Robert Leroy and Zienkiewicz, Olgierd Cecil and Taylor, Robert Lee},
+  volume={3},
+  year={1977},
+  publisher={McGraw-hill London}
+}
+@book{leveque2007finite,
+  title={Finite difference methods for ordinary and partial differential equations: steady-state and time-dependent problems},
+  author={LeVeque, Randall J},
+  volume={98},
+  year={2007},
+  publisher={Siam}
 }
