--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -103,6 +103,13 @@
   publisher={Taylor \& Francis}
 }
 
+@misc{donea2004encyclopedia,
+  title={Encyclopedia of Computational Mechanics Vol. 1: Fundamentals., Chapter 14: Arbitrary Lagrangian-Eulerian Methods},
+  author={Donea, J and Huerta, Antonio and Ponthot, J-Ph and Rodriguez-Ferran, A},
+  year={2004},
+  publisher={Wiley \& Sons}
+}
+
 @article{mickens2002nonstandard,
   title={Nonstandard finite difference schemes for differential equations},
   author={Mickens, Ronald E},
