Add a bunch of text on implementation

--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -75,6 +75,37 @@
   publisher={Elsevier}
 }
 
+@article{ghosh1991arbitrary,
+  title={An arbitrary Lagrangian-Eulerian finite element method for large deformation analysis of elastic-viscoplastic solids},
+  author={Ghosh, Somnath and Kikuchi, Noboru},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={86},
+  number={2},
+  pages={127--188},
+  year={1991},
+  publisher={Elsevier}
+}
+
+@incollection{poliakov1993explicit,
+  title={An explicit inertial method for the simulation of viscoelastic flow: an evaluation of elastic effects on diapiric flow in two-and three-layers models},
+  author={Poliakov, ANB and Cundall, PA and Podladchikov, YY and Lyakhovsky, VA},
+  booktitle={Flow and Creep in the Solar System: observations, modeling and Theory},
+  pages={175--195},
+  year={1993},
+  publisher={Springer}
+}
+
+@article{choi2013dynearthsol2d,
+  title={DynEarthSol2D: An efficient unstructured finite element method to study long-term tectonic deformation},
+  author={Choi, E and Tan, E and Lavier, LL and Calo, Victor M},
+  journal={Journal of Geophysical Research: Solid Earth},
+  volume={118},
+  number={5},
+  pages={2429--2444},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
 @article{furuichi2015implicit,
   title={Implicit solution of the material transport in Stokes flow simulation: Toward thermal convection simulation surrounded by free surface},
   author={Furuichi, Mikito and May, Dave A},
